--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -30,11 +30,12 @@
       <version>2.8.6</version>
     </dependency>
 
-    <dependency>
+    <dependency> <!--Users API App Engine dependency -->
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.9.59</version>
     </dependency>
+
   </dependencies>
 
   <build>
